--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skyfall Drop</title>
     <style>
-        body { margin: 0; overflow: hidden; }
+        body { margin: 0; overflow: hidden; background-color: #000; }
         canvas { display: block; }
+        /* Basic styles for HTML UI Overlay */
+        .ui-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none; /* Allow clicks/touches to pass through to canvas by default */
+            color: white;
+            font-family: sans-serif;
+            text-shadow: 1px 1px 2px black;
+        }
+        #score-display {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            font-size: 24px;
+        }
+        #message-area {
+            position: absolute;
+            top: 60px; /* Below score */
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 30px;
+            text-align: center;
+            color: yellow;
+        }
+        #snapshot-button {
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
+            padding: 10px 15px;
+            background-color: rgba(255, 255, 255, 0.7);
+            color: black;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            pointer-events: auto; /* Make button clickable */
+            text-shadow: none;
+        }
+        #snapshot-button:hover {
+            background-color: rgba(255, 255, 255, 1.0);
+        }
     </style>
 </head>
 <body>
+    <!-- Canvas for Three.js rendering -->
     <canvas id="game"></canvas>
+
+    <!-- HTML UI Overlay Elements -->
+    <div class="ui-overlay">
+        <div id="score-display">Score: 0</div>
+        <div id="message-area">
+            <!-- Messages will be added here dynamically -->
+        </div>
+        <button id="snapshot-button">SNAP</button>
+    </div>
+
+    <!-- Import Map to resolve bare module specifier 'three' -->
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "../node_modules/three/build/three.module.js"
+        }
+    }
+    </script>
+
+    <!-- Main game script -->
     <script type="module" src="../src/main.js"></script>
 </body>
 </html>
