--- a/public/index.html
+++ b/public/index.html
@@ -70,12 +70,12 @@
     <script type="importmap">
     {
         "imports": {
-            "three": "../node_modules/three/build/three.module.js"
+            "three": "https://unpkg.com/three@0.175.0/build/three.module.js"
         }
     }
     </script>
 
     <!-- Main game script -->
-    <script type="module" src="../src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
 </body>
 </html>
